--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
                                 </filter>
                             </defs>
                         </svg>
-                        <a href="/static/images/curriculum-vitae.jpg" target="_blank" title="Curriculum-Vitae"
+                        <a href="/static/images/curriculum-vitae.pdf" target="_blank" title="Curriculum-Vitae"
                            id="component-1"
                            class="button--1"> <!--onmousedown="bleep.play()"-->
                             <!--                            Curriculum Vitae-->
@@ -302,7 +302,7 @@
                                     </filter>
                                 </defs>
                             </svg>
-                            <a href="/static/images/curriculum-vitae.jpg" target="_blank" title="Curriculum-Vitae"
+                            <a href="/static/images/curriculum-vitae.pdf" target="_blank" title="Curriculum-Vitae"
                                id="component-2"
                                class="button--2" style="filter:url('#filter-goo-2')"> <!--onmousedown="bleep.play()"-->
                                 Curriculum Vitae
